Fixed h1 size on mobile dark mode

--- a/CorseraPortfolio/dark-styles.css
+++ b/CorseraPortfolio/dark-styles.css
@@ -308,7 +308,7 @@ h1 {
 
     h1{
 
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
 }
 
